Fixed mention borders getting cut off.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -1080,6 +1080,7 @@ sender-column-width = 150px
     word-wrap break-word
 
   .mention
+    display inline-block
     border 1px solid #B4B4B4
     border-radius 4px
     padding 0 3px
